--- a/recipes/redbeansandrice.html
+++ b/recipes/redbeansandrice.html
@@ -7,6 +7,14 @@
 
     <body>
         <h1>Red Beans and Rice</h1>
-        
+        <p><h3>Ingredients</h3></p>
+        <ul>
+            <li>White Rice</li>
+            <li>Red Kidney Beans</li>
+            <li>Left over Ham-bone</li>
+            <li>Yellow/Brown Onion</li>
+            <li>Celery</li>
+            <li>Green Bell Pepper</li>
+        </ul>
     </body>
 </html>
