--- a/recipes/redbeansandrice.html
+++ b/recipes/redbeansandrice.html
@@ -24,7 +24,7 @@
             <li>Start by soaking your red beans in water for 12-24 hours</li>
             <li>When beans have been soaked and you are ready to cook, start by heating a large pot on medium heat.</li>
             <li>Add enough flavorless oil to the pot to cover the bottom and add your trinity</li>
-            <li>Continue to cook on medium heat until the clery, bell pepper and onion are translucent</li>
+            <li>Continue to cook on medium heat until the clerey, bell pepper and onion are translucent</li>
             <li>When the celery, green pepper and onion are cooked through, add your soaked red beans and cover with water</li>
             <li>Turn heat to medium-high and bring mixture to a low boil</li>
             <li>Add your ham-bone to the pot and allow mixture to cook until beans begin to soften</li>
