Added index, red lentil and salmon fillet

--- a/recipes/redbeansandrice.html
+++ b/recipes/redbeansandrice.html
@@ -22,7 +22,7 @@
         <p>Steps</p>
         <ol>
             <li>Start by soaking your red beans in water for 12-24 hours</li>
-            <li>When beans have been soaked and you are ready to cook, start by heating a large pot on medium heat.</li>
+            <li>When beans have been soaked and you are ready to cook, start by heating a large pot on medium heat</li>
             <li>Add enough flavorless oil to the pot to cover the bottom and add your trinity</li>
             <li>Continue to cook on medium heat until the clerey, bell pepper and onion are translucent</li>
             <li>When the celery, green pepper and onion are cooked through, add your soaked red beans and cover with water</li>
