Finalized all recipes

--- a/recipes/red-lentil-curry.html
+++ b/recipes/red-lentil-curry.html
@@ -20,6 +20,7 @@
         <li>2 Tablespoons of Tomato Paste</li>
         <li>24oz of Veggie Broth</li>
         <li>1 Large Yellow Onion</li>
+        <li>1 Bunch of Cilantro</li>
         <li>3-4 Handfuls of Raw Spinach (optional)</li>
     </ul>
     
@@ -36,5 +37,12 @@
         <li>Now add in your vegetable broth and bring to a low boil</li>
         <li>Once mixture is at a low boil, stir in your spinach and cover the pot with a lid and turn the heat to medium-low</li>
     </ol>
-    
+    <p><h3>Time to Serve!</h3></p>
+        <ol>
+            <li>Scoop your lentil mixture onto a plate or into a bowl</li>
+            <li>Serve with white rice or naan</li>
+            <li>Garnish lentils with cilantro</li>
+            <li>Enjoy!</li>
+
     </body>
+</html>
